add: first screen

--- a/index.html
+++ b/index.html
@@ -41,6 +41,48 @@
         </a>
       </div>
     </div>
+    <div class="header__content">
+      <div class="container">
+        <h1 class="header__title">Морепродукты из Норвегии</h1>
+        <div class="header-slider">
+          <button class="header-slider__arrow header-slider__arrow-prev"><img src="images/arrow-prev.svg" alt="arrow"></button>
+          <button class="header-slider__arrow header-slider__arrow-next"><img src="images/arrow-next.svg" alt="arrow"></button>
+          <ul class="header-slider__numbers">
+            <li class="header-slider__number"><button class="header-slider__click">1</button></li>
+            <li class="header-slider__number"><button class="header-slider__click">2</button></li>
+            <li class="header-slider__number"><button class="header-slider__click">3</button></li>
+            <li class="header-slider__number"><button class="header-slider__click">4</button></li>
+            <li class="header-slider__number"><button class="header-slider__click">5</button></li>
+          </ul>
+          <div class="header-slider__item">
+            <p class="header-slider__text">Норвежские морепродукты уникальны, потому что они выращиваются экологически рациональным образом, основываясь на знаниях и опыте многих поколений, заботясь об океане и будущих поколениях.</p>
+            <p class="header-slider__text">Ежедневно во всем мире подают несколько миллионов норвежских блюд из морепродуктов.</p>
+          </div>
+          <!-- <div class="header-slider__item">
+            <p class="header-slider__text">Норвежские морепродукты уникальны, потому что они выращиваются экологически рациональным образом, основываясь на знаниях и опыте многих поколений, заботясь об океане и будущих поколениях.</p>
+            <p class="header-slider__text">Ежедневно во всем мире подают несколько миллионов норвежских блюд из морепродуктов.</p>
+          </div>
+          <div class="header-slider__item">
+            <p class="header-slider__text">Норвежские морепродукты уникальны, потому что они выращиваются экологически рациональным образом, основываясь на знаниях и опыте многих поколений, заботясь об океане и будущих поколениях.</p>
+            <p class="header-slider__text">Ежедневно во всем мире подают несколько миллионов норвежских блюд из морепродуктов.</p>
+          </div>
+          <div class="header-slider__item">
+            <p class="header-slider__text">Норвежские морепродукты уникальны, потому что они выращиваются экологически рациональным образом, основываясь на знаниях и опыте многих поколений, заботясь об океане и будущих поколениях.</p>
+            <p class="header-slider__text">Ежедневно во всем мире подают несколько миллионов норвежских блюд из морепродуктов.</p>
+          </div>
+          <div class="header-slider__item">
+            <p class="header-slider__text">Норвежские морепродукты уникальны, потому что они выращиваются экологически рациональным образом, основываясь на знаниях и опыте многих поколений, заботясь об океане и будущих поколениях.</p>
+            <p class="header-slider__text">Ежедневно во всем мире подают несколько миллионов норвежских блюд из морепродуктов.</p>
+          </div> -->
+        </div>
+        <a href="#" class="header__content-btn">ВЫБРАТЬ</a>
+        <div class="header__content-box">
+          <a href="#" class="header__content-link header__content-link--active">RU</a>/
+          <a href="#" class="header__content-link">EN</a>
+        </div>
+      </div>
+
+    </div>
   </header>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
